stop using native image - move to ZGC GC and jvm